# RAG-Llamaindex-Pinecone-FastApi

./: .dockerignore  .gitattributes  .gitignore  .sample.env  Dockerfile  docker-entrypoint.sh  pyproject.toml  readme.md  sample.env
app/: __init__.py  config.py  config.yaml  data_models.py  log.py  main.py  stream_lit.py  utils.py
scripts/: config.py  config.yaml  create_index.py  ingestion_pipeline.py
